segment auto deletion
